Fixes small mistakes and changes
Fixes various spelling and format mistakes as well matching the content with the retail
notebook.

--- a/notebooks/Media/02_Training_Layer.ipynb
+++ b/notebooks/Media/02_Training_Layer.ipynb
@@ -10,16 +10,16 @@
     "\n",
     "1. [Introduction](#intro)\n",
     "1. [Create Domain Recommenders](#recommenders)\n",
-    "1. [Create solutions](#solutions)\n",
-    "1. [Evaluate solutions](#eval)\n",
-    "1. [Using evaluation metrics](#use)\n",
+    "1. [Create Solutions](#solutions)\n",
+    "1. [Evaluate Solutions](#eval)\n",
+    "1. [Using Evaluation Metrics](#use)\n",
     "1. [Deploy a Campaign](#deploy)\n",
     "1. [Create Filters](#interact)\n",
-    "1. [Wrap up](#wrapup)\n",
+    "1. [Storing useful variables](#wrapup)\n",
     "\n",
     "## Introduction <a class=\"anchor\" id=\"intro\"></a>\n",
     "\n",
-    "To recap, a Domain dataset group, where you create preconfigured resources for different business domains and use cases, such as getting recommendations for similar videos (VIDEO_ON_DEMAND domain) or best selling items (ECOMMERCE domain). You choose your business domain, import your data, and create recommenders. You use recommenders in your application to get recommendations.\n",
+    "To recap, we created a Domain dataset group, where you create preconfigured resources for different business domains and use cases, such as getting recommendations for similar videos (VIDEO_ON_DEMAND domain) or best selling items (ECOMMERCE domain). You choose your business domain, import your data, and create recommenders. You use recommenders in your application to get recommendations.\n",
     "\n",
     "Use a [Domain dataset group](https://docs.aws.amazon.com/personalize/latest/dg/domain-dataset-groups.html) if you have a video on demand or e-commerce application and want Amazon Personalize to find the best configurations for your use cases. If you start with a Domain dataset group, you can also add custom resources such as solutions with solution versions trained with recipes for custom use cases.\n",
     "\n",
@@ -38,7 +38,7 @@
     "1. **Event Type** - Categorical label of an event (clicked, purchased, rated, listened, watched, etc).\n",
     "1. **Event Value** - A numeric value corresponding to the event type that occurred. This value can be used to filter interactions that are included in model training by specifying a minimum threshold. For example, suppose you have an event type of `Rated` and the value is the user rating on a scale of 0 to 5. Since Personalize models on positive interactions, you can use an event value threshold of, say, 3 to only include interactions with an event type of `Rated` that have an event value of 3 or higher.\n",
     "\n",
-    "The event type and event value fields are additional data which can be used to filter the data sent for training the personalization model. In this particular exercise we will not have an event type or event value (More information on how to use the eventValue with eventValueThreshold for Custom Domains in the [documentation](https://docs.aws.amazon.com/personalize/latest/dg/recording-events.html)). \n",
+    "The event type and event value fields are additional data which can be used to filter the data sent for training the personalization model. In this particular exercise we dol not have an event value and will not be filtering the training data, i.e. we will use all available data for training (More information on how to use the eventValue with eventValueThreshold for Custom Domains in the [documentation](https://docs.aws.amazon.com/personalize/latest/dg/recording-events.html)). \n",
     "\n",
     "### In this notebook we will accomplish the following:\n",
     "\n",
@@ -137,9 +137,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[More use cases per domain](https://docs.aws.amazon.com/personalize/latest/dg/domain-use-cases.html).\n",
+    "\n",
     "### Create a \"More like X\" Recommender\n",
     "\n",
-    "We are going to create a recommender of the type \"More like X\". This type of recommender offers recommendations for videos that are similar to a video a user watched. With this use case, Amazon Personalize automatically filters videos the user watched based on the userId specified in the `get_recommendations call. "
+    "We are going to create a recommender of the type \"More like X\". This type of recommender offers recommendations for videos that are similar to a video a user watched. With this use case, Amazon Personalize automatically filters videos the user watched based on the userId specified in the `get_recommendations` call. "
    ]
   },
   {
@@ -185,14 +187,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create solutions <a class=\"anchor\" id=\"solutions\"></a>\n",
+    "## Create Solutions <a class=\"anchor\" id=\"solutions\"></a>\n",
     "[Back to top](#top)\n",
     "\n",
     "Some use cases require a custom implementation. \n",
     "\n",
     "In Amazon Personalize, a specific variation of an algorithm is called a recipe. Different recipes are suitable for different situations. A trained model is called a solution, and each solution can have many versions that relate to a given volume of data when the model was trained.\n",
     "\n",
-    "Let's look at all available recipes that are not of a specific domain and can be used to create cusom solutions. "
+    "Let's look at all available recipes that are not of a specific domain and can be used to create custom solutions. "
    ]
   },
   {
@@ -326,63 +328,75 @@
     "max_time = time.time() + 10*60*60 # 10 hours\n",
     "while time.time() < max_time:\n",
     "\n",
+    "    # Recommender more_like_x\n",
     "    version_response = personalize.describe_recommender(\n",
     "        recommenderArn = recommender_more_like_x_arn\n",
     "    )\n",
-    "    status = version_response[\"recommender\"][\"status\"]\n",
+    "    status_more_like_x = version_response[\"recommender\"][\"status\"]\n",
     "\n",
-    "    if status == \"ACTIVE\":\n",
+    "    if status_more_like_x == \"ACTIVE\":\n",
     "        print(\"Build succeeded for {}\".format(recommender_more_like_x_arn))\n",
     "        \n",
-    "    elif status == \"CREATE FAILED\":\n",
+    "    elif status_more_like_x == \"CREATE FAILED\":\n",
     "        print(\"Build failed for {}\".format(recommender_more_like_x_arn))\n",
-    "\n",
-    "    if status == \"ACTIVE\":\n",
     "        break\n",
-    "    else:\n",
-    "        print(\"The recommender more_like_x build is still in progress\")\n",
-    "        \n",
-    "    time.sleep(60)\n",
-    "    \n",
-    "while time.time() < max_time:\n",
     "\n",
+    "    if not status_more_like_x == \"ACTIVE\":\n",
+    "        print(\"The recommender more_like_x build is still in progress\")\n",
+    "    else:\n",
+    "        print(\"The recommender more_like_x is ACTIVE\")\n",
+    "\n",
+    "    # Recommender top_picks_for_you\n",
     "    version_response = personalize.describe_recommender(\n",
     "        recommenderArn = recommender_top_picks_arn\n",
     "    )\n",
-    "    status = version_response[\"recommender\"][\"status\"]\n",
+    "    status_top_picks = version_response[\"recommender\"][\"status\"]\n",
     "\n",
-    "    if status == \"ACTIVE\":\n",
+    "    if status_top_picks == \"ACTIVE\":\n",
     "        print(\"Build succeeded for {}\".format(recommender_top_picks_arn))\n",
-    "        \n",
-    "    elif status == \"CREATE FAILED\":\n",
+    "    elif status_top_picks == \"CREATE FAILED\":\n",
     "        print(\"Build failed for {}\".format(recommender_top_picks_arn))\n",
-    "\n",
-    "    if status == \"ACTIVE\":\n",
     "        break\n",
-    "    else:\n",
-    "        print(\"The recommender top_picks is still in progress\")\n",
-    "        \n",
-    "    time.sleep(60)\n",
     "\n",
-    "while time.time() < max_time:\n",
-    "   \n",
+    "    if not status_top_picks == \"ACTIVE\":\n",
+    "        print(\"The recommender top_picks build is still in progress\")\n",
+    "    else:\n",
+    "        print(\"The recommender top_picks is ACTIVE\")\n",
+    "        \n",
+    "    # Reranking Solution \n",
     "    version_response = personalize.describe_solution_version(\n",
     "        solutionVersionArn = rerank_solution_version_arn\n",
     "    )\n",
-    "    status = version_response[\"solutionVersion\"][\"status\"]\n",
+    "    status_rerank_solution = version_response[\"solutionVersion\"][\"status\"]\n",
     "\n",
-    "    if status == \"ACTIVE\":\n",
+    "    if status_rerank_solution == \"ACTIVE\":\n",
     "        print(\"Build succeeded for {}\".format(rerank_solution_version_arn))\n",
     "        \n",
-    "    elif status == \"CREATE FAILED\":\n",
+    "    elif status_rerank_solution == \"CREATE FAILED\":\n",
     "        print(\"Build failed for {}\".format(rerank_solution_version_arn))\n",
-    "\n",
-    "    if status == \"ACTIVE\" or status == \"CREATE FAILED\":\n",
     "        break\n",
+    "\n",
+    "    if not status_rerank_solution == \"ACTIVE\":\n",
+    "        print(\"Rerank Solution Version build is still in progress\")\n",
     "    else:\n",
-    "        print(\"Rerank solution build is still in progress\")\n",
+    "        print(\"The Rerank solution is ACTIVE\")\n",
     "        \n",
+    "    if status_more_like_x == \"ACTIVE\" and status_top_picks == 'ACTIVE' and status_rerank_solution == \"ACTIVE\":\n",
+    "        break\n",
+    "\n",
+    "    print()\n",
     "    time.sleep(60)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Wait for Recommenders and Solution Versions to finish training\n",
+    "\n",
+    "It can take 40-60 minutes for all Recommenders and solution versions to be created. During this process a model is being trained and tested with the data contained within your datasets. The duration of training jobs can increase based on the size of the dataset, training parameters and a selected recipe. \n",
+    "\n",
+    "While you are waiting for this process to complete you can learn more about solutions in [the documentation](https://docs.aws.amazon.com/personalize/latest/dg/training-deploying-solutions.html)"
    ]
   },
   {
@@ -488,7 +502,7 @@
    "source": [
     "Just a quick comment on this one, here we see again a precision of near (2.7% for full, 2.2% for small), as this is based on User Personalization, that is to be expected. However the sample items are not the same items used for validaiton, thus the low scoring.\n",
     "\n",
-    "## Using evaluation metrics <a class=\"anchor\" id=\"use\"></a>\n",
+    "## Using Evaluation Metrics <a class=\"anchor\" id=\"use\"></a>\n",
     "[Back to top](#top)\n",
     "\n",
     "It is important to use evaluation metrics carefully. There are a number of factors to keep in mind.\n",
@@ -525,14 +539,9 @@
     "\n",
     "A campaign is a hosted solution version; an endpoint which you can query for recommendations. Pricing is set by estimating throughput capacity (requests from users for personalization per second). When deploying a campaign, you set a minimum throughput per second (TPS) value. This service, like many within AWS, will automatically scale based on demand, but if latency is critical, you may want to provision ahead for larger demand. For this POC and demo, all minimum throughput thresholds are set to 1. For more information, see the [pricing page](https://aws.amazon.com/personalize/pricing/).\n",
     "\n",
-    "Let's start deploying the campaign."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Deploy a campaign for your personalized ranking solution version. It can take around 10 minutes to deploy a campaign. Normally, we would use a while loop to poll until the task is completed. However the task would block other cells from executing, and the goal here is to create multiple campaigns. So we will set up the while loop for all of the campaigns further down in the notebook. There, you will also find instructions for viewing the progress in the AWS console."
+    "Once we're satisfied with our solution version, we need to create Campaigns for each solution version. When creating a campaign you specify the minimum transactions per second (`minProvisionedTPS`) that you expect to make against the service for this campaign. Personalize will automatically scale the inference endpoint up and down for the campaign to match demand but will never scale below `minProvisionedTPS`.\n",
+    "\n",
+    "Let's create a campaigns for our solution versions set at `minProvisionedTPS` of 1."
    ]
   },
   {
@@ -568,7 +577,9 @@
     "* Click `Campaigns`.\n",
     "* You will now see a list of all of the campaigns you created above, including a column with the status of the campaign. Once it is `Active`, your campaign is ready to be queried.\n",
     "\n",
-    "Or simply run the cell below to keep track of the campaign creation status of the campaign we created."
+    "Or simply run the cell below to keep track of the campaign creation status of the campaign we created.\n",
+    "\n",
+    "While you are waiting for this to complete you can learn more about campaigns in [the documentation](https://docs.aws.amazon.com/personalize/latest/dg/campaigns.html)"
    ]
   },
   {
@@ -605,6 +616,8 @@
    "source": [
     "## Create Filters <a class=\"anchor\" id=\"interact\"></a>\n",
     "[Back to top](#top)\n",
+    "\n",
+    "Amazon Personalize supports the ability to create [filters](https://docs.aws.amazon.com/personalize/latest/dg/filter.html) that can be used to exclude items from being recommended that meet a filter expression. \n",
     "\n",
     "Now that all campaigns are deployed and active amd the recommenders have been trained we can create filters. Filters can be created for fields of both Items and Events. Filters can also be created dynamically for `IN` and `=` operations. For range queries, you should use static filters. \n",
     "Range queries use the following operations: `NOT IN`, `<`, `>`, `<=`, and `>=`.\n",
@@ -644,9 +657,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "creategenrefilter_response = personalize.create_filter(name='Genre',\n",
-    "    datasetGroupArn=dataset_group_arn,\n",
-    "    filterExpression='INCLUDE ItemID WHERE Items.GENRES IN ($GENRE)'\n",
+    "create_genre_filter_response = personalize.create_filter(name='Genre',\n",
+    "    datasetGroupArn = dataset_group_arn,\n",
+    "    filterExpression = 'INCLUDE ItemID WHERE Items.GENRES IN ($GENRE)'\n",
     "    )"
    ]
   },
@@ -656,7 +669,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "genre_filter_arn = creategenrefilter_response['filterArn']"
+    "genre_filter_arn = create_genre_filter_response['filterArn']"
    ]
   },
   {
@@ -705,9 +718,9 @@
     "    next_decade = str(decade + 10)\n",
     "    try:\n",
     "        createfilter_response = personalize.create_filter(\n",
-    "            name=current_decade + \"s\",\n",
-    "            datasetGroupArn=dataset_group_arn,\n",
-    "            filterExpression='INCLUDE ItemID WHERE Items.YEAR >= '+ current_decade +' AND Items.YEAR < '+ next_decade +''\n",
+    "            name = current_decade + \"s\",\n",
+    "            datasetGroupArn = dataset_group_arn,\n",
+    "            filterExpression = 'INCLUDE ItemID WHERE Items.YEAR >= '+ current_decade +' AND Items.YEAR < '+ next_decade +''\n",
     "    )\n",
     "        # Add the ARN to the list\n",
     "        meta_filter_decade_arns.append(createfilter_response['filterArn'])\n",
@@ -721,9 +734,9 @@
     "        else:    \n",
     "            time.sleep(120)\n",
     "            createfilter_response = personalize.create_filter(\n",
-    "                name=current_decade + \"s\",\n",
-    "                datasetGroupArn=dataset_group_arn,\n",
-    "                filterExpression='INCLUDE ItemID WHERE Items.YEAR >= '+ current_decade +' AND Items.YEAR < '+ next_decade +''\n",
+    "                name = current_decade + \"s\",\n",
+    "                datasetGroupArn = dataset_group_arn,\n",
+    "                filterExpression = 'INCLUDE ItemID WHERE Items.YEAR >= '+ current_decade +' AND Items.YEAR < '+ next_decade +''\n",
     "    )\n",
     "            # Add the ARN to the list\n",
     "            meta_filter_decade_arns.append(createfilter_response['filterArn'])\n",
@@ -757,13 +770,13 @@
    "outputs": [],
    "source": [
     "createwatchedfilter_response = personalize.create_filter(name='watched',\n",
-    "    datasetGroupArn=dataset_group_arn,\n",
-    "    filterExpression='INCLUDE ItemID WHERE Interactions.event_type IN (\"Watch\")'\n",
+    "    datasetGroupArn = dataset_group_arn,\n",
+    "    filterExpression = 'INCLUDE ItemID WHERE Interactions.event_type IN (\"Watch\")'\n",
     "    )\n",
     "\n",
     "createunwatchedfilter_response = personalize.create_filter(name='unwatched',\n",
-    "    datasetGroupArn=dataset_group_arn,\n",
-    "    filterExpression='EXCLUDE ItemID WHERE Interactions.event_type IN (\"Watch\")'\n",
+    "    datasetGroupArn = dataset_group_arn,\n",
+    "    filterExpression = 'EXCLUDE ItemID WHERE Interactions.event_type IN (\"Watch\")'\n",
     "    )"
    ]
   },
