--- a/notebooks/Media/03_Inference_Layer.ipynb
+++ b/notebooks/Media/03_Inference_Layer.ipynb
@@ -4,18 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Interacting with Campaigns <a class=\"anchor\" id=\"top\"></a>\n",
+    "# Interacting with Recommenders and Campaigns <a class=\"anchor\" id=\"top\"></a>\n",
     "\n",
     "In this notebook, you will deploy and interact with campaigns in Amazon Personalize.\n",
     "\n",
     "1. [Introduction](#intro)\n",
-    "1. [Create campaigns](#create)\n",
-    "1. [Interact with recommenders](#interact-recommenders)\n",
-    "1. [Interact with campaigns](#interact-campaigns)\n",
+    "1. [Interact with Recommenders](#interact-recommenders)\n",
+    "1. [Interact with Campaigns](#interact-campaigns)\n",
     "1. [Using Static and Dynamic Filters](#filters)\n",
-    "1. [Real time events](#real-time)\n",
-    "1. [Batch recommendations](#batch)\n",
-    "1. [Wrap up](#wrapup)\n",
+    "1. [Real-time Events](#real-time)\n",
+    "1. [Batch Recommendations](#batch)\n",
+    "1. [Wrap Up](#wrapup)\n",
     "\n",
     "## Introduction <a class=\"anchor\" id=\"intro\"></a>\n",
     "[Back to top](#top)\n",
@@ -175,6 +174,7 @@
    "metadata": {},
    "source": [
     "## Interact with recommenders <a class=\"anchor\" id=\"interact-recommenders\"></a>\n",
+    "[Back to top](#top)\n",
     "\n",
     "Now that the recommenders have been trained, lets have a look at the recommendations we can get for our users!"
    ]
@@ -248,22 +248,22 @@
     "# Update DF rendering\n",
     "pd.set_option('display.max_rows', 30)\n",
     "\n",
-    "def get_new_recommendations_df(recommendations_df, movieId, userId):\n",
+    "def get_new_recommendations_df(recommendations_df, movie_id, user_id):\n",
     "    # Get the movie name\n",
-    "    movieName = get_movie_by_id(movieId)\n",
+    "    movie_name = get_movie_by_id(movie_id)\n",
     "    # Get the recommendations\n",
     "    get_recommendations_response = personalize_runtime.get_recommendations(\n",
     "        recommenderArn = recommender_more_like_x_arn,\n",
-    "        itemId = str(movieId),\n",
-    "        userId = userId\n",
+    "        itemId = str(movie_id),\n",
+    "        userId = user_id\n",
     "    )\n",
     "    # Build a new dataframe of recommendations\n",
     "    itemList = get_recommendations_response['itemList']\n",
     "    recommendationList = []\n",
     "    for item in itemList:\n",
     "        movie = get_movie_by_id(item['itemId'])\n",
-    "        recommendationList.append(movie)\n",
-    "    new_rec_df = pd.DataFrame(recommendationList, columns = [movieName])\n",
+    "        recommendation_list.append(movie)\n",
+    "    new_rec_df = pd.DataFrame(recommendation_list, columns = [movie_name])\n",
     "    # Add this dataframe to the old one\n",
     "    recommendations_df = pd.concat([recommendations_df, new_rec_df], axis=1)\n",
     "    return recommendations_df"
@@ -273,7 +273,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, let's test the helper function with several different movies. Let's sample some data from our dataset to test our SIMS campaign. Grab 5 random movies from our dataframe.\n",
+    "Now, let's test the helper function with several different movies. Let's sample some data from our dataset to test our \"More like X\" Recommender. Grab 5 random movies from our dataframe.\n",
     "\n",
     "Note: We are going to show similar titles, so you may want to re-run the sample until you recognize some of the movies listed"
    ]
@@ -294,13 +294,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sims_recommendations_df = pd.DataFrame()\n",
+    "more_like_x_recommendations_df = pd.DataFrame()\n",
     "movies = samples.index.tolist()\n",
     "\n",
     "for movie in movies:\n",
-    "    sims_recommendations_df = get_new_recommendations_df(sims_recommendations_df, movie, testUserId)\n",
+    "    more_like_x_recommendations_df = get_new_recommendations_df(more_like_x_recommendations_df, movie, testUserId)\n",
     "\n",
-    "sims_recommendations_df"
+    "more_like_x_recommendations_df"
    ]
   },
   {
@@ -360,22 +360,22 @@
     "# Update DF rendering\n",
     "pd.set_option('display.max_rows', 30)\n",
     "\n",
-    "def get_new_recommendations_df_users(recommendations_df, userId):\n",
+    "def get_new_recommendations_df_users(recommendations_df, user_id):\n",
     "    # Get the movie name\n",
     "    #movie_name = get_movie_by_id(artist_ID)\n",
     "    # Get the recommendations\n",
     "    get_recommendations_response = personalize_runtime.get_recommendations(\n",
     "        recommenderArn = recommender_top_picks_arn,\n",
-    "        userId = str(userId),\n",
+    "        userId = str(user_id),\n",
     "        numResults = 20\n",
     "    )\n",
     "    # Build a new dataframe of recommendations\n",
     "    itemList = get_recommendations_response['itemList']\n",
-    "    recommendationList = []\n",
+    "    recommendation_list = []\n",
     "    for item in itemList:\n",
     "        movie = get_movie_by_id(item['itemId'])\n",
-    "        recommendationList.append(movie)\n",
-    "    new_rec_df = pd.DataFrame(recommendationList, columns = [userId])\n",
+    "        recommendation_list.append(movie)\n",
+    "    new_rec_df = pd.DataFrame(recommendation_list, columns = [user_id])\n",
     "    # Add this dataframe to the old one\n",
     "    recommendations_df = pd.concat([recommendations_df, new_rec_df], axis=1)\n",
     "    return recommendations_df"
@@ -406,7 +406,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Interact with campaigns <a class=\"anchor\" id=\"interact-campaigns\"></a>\n",
+    "## Interact with Campaigns <a class=\"anchor\" id=\"interact-campaigns\"></a>\n",
     "[Back to top](#top)\n",
     "\n",
     "Now that the reranking campaign is deployed and active, we can start to get recommendations via an API call. "
@@ -418,7 +418,7 @@
    "source": [
     "### Personalized Ranking\n",
     "\n",
-    "The core use case for personalized ranking is to take a collection of items and to render them in priority or probable order of interest for a user. For a VOD application you want dynamically render a personalized shelf/rail/carousel based on some information (director, location, superhero franchise, movie time period, etc...). This may not be information that you have in your metadata, so a item metadata filter will not work, howeverr you may have this information within you system to generate the item list. \n",
+    "The core use case for personalized ranking is to take a collection of items and to render them in priority or probable order of interest for a user. For a VOD application you want dynamically render a personalized shelf/rail/carousel based on some information (director, location, superhero franchise, movie time period, etc...). This may not be information that you have in your metadata, so an item metadata filter will not work, however you may have this information within you system to generate the item list. \n",
     "\n",
     "To demonstrate this, we will use the same user from before and a random collection of items."
    ]
@@ -429,8 +429,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rerankUser = user\n",
-    "rerankItems = items_df.sample(25).index.tolist()"
+    "rerank_user = user\n",
+    "rerank_items = items_df.sample(25).index.tolist()"
    ]
   },
   {
@@ -467,8 +467,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Convert user to string:\n",
-    "user_id = str(rerank_user)\n",
     "rerank_item_list = []\n",
     "for item in rerank_items:\n",
     "    rerank_item_list.append(str(item))\n",
@@ -476,7 +474,7 @@
     "# Get recommended reranking\n",
     "get_recommendations_response_rerank = personalize_runtime.get_personalized_ranking(\n",
     "        campaignArn = rerank_campaign_arn,\n",
-    "        userId = user_id,\n",
+    "        userId = str(rerank_user),\n",
     "        inputList = rerank_item_list\n",
     ")"
    ]
@@ -540,13 +538,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_new_recommendations_df_by_static_filter(recommendations_df, userId, filter_arn):\n",
-    "    # Get the movie name\n",
-    "    #movie_name = get_movie_by_id(artist_ID)\n",
+    "def get_new_recommendations_df_by_static_filter(recommendations_df, user_id, filter_arn):\n",
     "    # Get the recommendations\n",
     "    get_recommendations_response = personalize_runtime.get_recommendations(\n",
     "        recommenderArn = recommender_top_picks_arn,\n",
-    "        userId = str(userId),\n",
+    "        userId = str(user_id),\n",
     "        filterArn = filter_arn\n",
     "    )\n",
     "    # Build a new dataframe of recommendations\n",
@@ -569,13 +565,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_new_recommendations_df_by_dynamic_filter(recommendations_df, userId, genre_filter_arn, filter_values):\n",
-    "    # Get the movie name\n",
-    "    #movie_name = get_movie_by_id(artist_ID)\n",
+    "def get_new_recommendations_df_by_dynamic_filter(recommendations_df, user_id, genre_filter_arn, filter_values):\n",
     "    # Get the recommendations\n",
     "    get_recommendations_response = personalize_runtime.get_recommendations(\n",
     "        recommenderArn = recommender_top_picks_arn,\n",
-    "        userId = str(userId),\n",
+    "        userId = str(user_id),\n",
     "        filterArn = genre_filter_arn,\n",
     "        filterValues = { \"GENRE\": \"\\\"\" + filter_values + \"\\\"\"}\n",
     "    )\n",
@@ -687,7 +681,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Real time events<a class=\"anchor\" id=\"real-time\"></a>\n",
+    "## Real-time Events<a class=\"anchor\" id=\"real-time\"></a>\n",
     "[Back to top](#top)\n",
     "\n",
     "The next topic is real-time events. Personalize has the ability to listen to events from your application in order to update the recommendations shown to the user. This is especially useful in media workloads, like video-on-demand, where a customer's intent may differ based on if they are watching with their children or on their own.\n",
@@ -799,13 +793,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# First pick a user\n",
-    "userId = user\n",
-    "\n",
     "# Get recommendations for the user\n",
     "get_recommendations_response = personalize_runtime.get_recommendations(\n",
     "        recommenderArn = recommender_top_picks_arn,\n",
-    "        userId = str(userId),\n",
+    "        userId = str(rerank_user),\n",
     "    )\n",
     "\n",
     "# Build a new dataframe for the recommendations\n",
@@ -814,7 +805,7 @@
     "for item in item_list:\n",
     "    artist = get_movie_by_id(item['itemId'])\n",
     "    recommendationList.append(artist)\n",
-    "user_recommendations_df = pd.DataFrame(recommendationList, columns = [userId])\n",
+    "user_recommendations_df = pd.DataFrame(recommendationList, columns = [rerank_user])\n",
     "user_recommendations_df"
    ]
   },
@@ -843,7 +834,7 @@
    "source": [
     "# Note this will take about 15 seconds to complete due to the sleeps\n",
     "for movie in movies:\n",
-    "    user_recommendations_df = get_new_recommendations_df_users_real_time(user_recommendations_df, userId, movie,'click')\n",
+    "    user_recommendations_df = get_new_recommendations_df_users_real_time(user_recommendations_df, rerank_user, movie,'click')\n",
     "    time.sleep(5)\n",
     "    "
    ]
@@ -888,24 +879,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_new_ranked_recommendations_df_by_static_filter(recommendations_df, userId, rerankItemList, filter_arn):\n",
+    "def get_new_ranked_recommendations_df_by_static_filter(recommendations_df, user_id, rerank_item_list, filter_arn):\n",
     "    \n",
     "    # Get the recommendations\n",
     "    get_recommendations_response = personalize_runtime.get_personalized_ranking(\n",
     "        campaignArn = rerank_campaign_arn,\n",
-    "        userId = str(userId),\n",
-    "        inputList = rerankItemList,\n",
+    "        userId = str(user_id),\n",
+    "        inputList = rerank_item_list,\n",
     "        filterArn = filter_arn\n",
     "    )\n",
     "    # Build a new dataframe of recommendations\n",
-    "    itemList = get_recommendations_response['personalizedRanking']\n",
-    "    recommendationList = []\n",
-    "    for item in itemList:\n",
+    "    item_list = get_recommendations_response['personalizedRanking']\n",
+    "    recommendation_list = []\n",
+    "    for item in item_list:\n",
     "        movie = get_movie_by_id(item['itemId'])\n",
-    "        recommendationList.append(movie)\n",
+    "        recommendation_list.append(movie)\n",
     "\n",
-    "    filterName = filter_arn.split('/')[1]\n",
-    "    new_rec_df = pd.DataFrame(recommendationList, columns = [filterName])\n",
+    "    filter_name = filter_arn.split('/')[1]\n",
+    "    new_rec_df = pd.DataFrame(recommendation_list, columns = [filter_name])\n",
     "    # Add this dataframe to the old one\n",
     "    recommendations_df = pd.concat([recommendations_df, new_rec_df], axis=1)\n",
     "    return recommendations_df"
@@ -919,7 +910,7 @@
    "source": [
     "recommendations_df_events = pd.DataFrame()\n",
     "for filter_arn in interaction_filter_arns:\n",
-    "    recommendations_df_events = get_new_ranked_recommendations_df_by_static_filter(recommendations_df_events, user, rerank_item_list, filter_arn)\n",
+    "    recommendations_df_events = get_new_ranked_recommendations_df_by_static_filter(recommendations_df_events, rerank_user, rerank_item_list, filter_arn)\n",
     "    \n",
     "recommendations_df_events"
    ]
@@ -939,7 +930,7 @@
    "source": [
     "ranked_unwatched_recommendations_response = personalize_runtime.get_personalized_ranking(\n",
     "    campaignArn = rerank_campaign_arn,\n",
-    "    userId = str(userId),\n",
+    "    userId = str(rerank_user),\n",
     "    inputList = rerank_item_list,\n",
     "    filterArn = filter_arn)\n",
     "\n",
@@ -947,7 +938,7 @@
     "\n",
     "for item in item_list:\n",
     "    print('sending event watch for ' + get_movie_by_id(item['itemId']))\n",
-    "    send_movie_click(userId=user_id, itemId=item['itemId'], eventType='Watch')\n",
+    "    send_movie_click(userId=rerank_user, itemId=item['itemId'], eventType='Watch')\n",
     "    time.sleep(10)"
    ]
   },
@@ -966,7 +957,7 @@
    "source": [
     "recommendations_df_events = pd.DataFrame()\n",
     "for filter_arn in interaction_filter_arns:\n",
-    "    recommendations_df_events = get_new_ranked_recommendations_df_by_static_filter(recommendations_df_events, user, rerank_item_list, filter_arn)\n",
+    "    recommendations_df_events = get_new_ranked_recommendations_df_by_static_filter(recommendations_df_events, rerank_user, rerank_item_list, filter_arn)\n",
     "recommendations_df_events"
    ]
   },
@@ -974,10 +965,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Batch recommendations <a class=\"anchor\" id=\"batch\"></a>\n",
+    "## Batch Recommendations <a class=\"anchor\" id=\"batch\"></a>\n",
     "[Back to top](#top)\n",
     "\n",
-    "There are many cases where you may want to have a larger dataset of exported recommendations. Recently, Amazon Personalize launched batch recommendations as a way to export a collection of recommendations to S3. In this example, we will walk through how to do this for the Personalized Ranking solution. For more information about batch recommendations, please see the [documentation](https://docs.aws.amazon.com/personalize/latest/dg/recommendations-batch.html). This feature applies to all recipes, but the output format will vary.\n",
+    "There are many cases where you may want to have a larger dataset of exported recommendations. Amazon Personalize launched batch recommendations as a way to export a collection of recommendations to S3. In this example, we will walk through how to do this for the Personalized Ranking solution. For more information about batch recommendations, please see the [documentation](https://docs.aws.amazon.com/personalize/latest/dg/recommendations-batch.html). This feature applies to all recipes, but the output format will vary.\n",
     "\n",
     "A simple implementation looks like this:\n",
     "\n",
