--- a/notebooks/Media/01_Data_Layer.ipynb
+++ b/notebooks/Media/01_Data_Layer.ipynb
@@ -10,19 +10,19 @@
     "\n",
     "1. [How to Use the Notebook](#usenotebook)\n",
     "1. [Introduction](#intro)\n",
-    "1. [Define your use case](#usecase)\n",
-    "1. [Choose a dataset or data source](#source)\n",
-    "1. [Prepare the Interactions data](#prepare_interactions)\n",
-    "1. [Prepare the Items data](#prepare_items)\n",
-    "1. [Prepare the Users data](#prepare_users)\n",
+    "1. [Define your Use Case](#usecase)\n",
+    "1. [Choose a Dataset or Data Source](#source)\n",
+    "1. [Prepare the Interactions Data](#prepare_interactions)\n",
+    "1. [Prepare the Item Metadata](#prepare_items)\n",
+    "1. [Prepare the User Metadata](#prepare_users)\n",
     "1. [Configure an S3 bucket and an IAM  role](#bucket_role)\n",
-    "1. [Create dataset group](#group_dataset)\n",
+    "1. [Create Dataset Group](#group_dataset)\n",
     "1. [Create the Interactions Schema](#interact_schema)\n",
-    "1. [Create the Items (movies) Schema](#items_schema)\n",
+    "1. [Create the Items (Movies) Schema](#items_schema)\n",
     "1. [Create the Users Schema](#users_schema)\n",
-    "1. [Import the Interactions data](#import_interactions)\n",
-    "1. [Import the Items metadata](#import_items)\n",
-    "1. [Import the User metadata](#import_users)\n",
+    "1. [Import the Interactions Data](#import_interactions)\n",
+    "1. [Import the Item Metadata](#import_items)\n",
+    "1. [Import the User Metadata](#import_users)\n",
     "\n",
     "## How to Use the Notebook <a class=\"anchor\" id=\"usenotebook\"></a>\n",
     "\n",
@@ -49,7 +49,7 @@
     "You can create and manage Domain dataset groups and Custom dataset groups with the AWS console, the AWS Command Line Interface (AWS CLI), or programmatically with the AWS SDKs.\n",
     "\n",
     "\n",
-    "## Define your use case <a class=\"anchor\" id=\"usecase\"></a>\n",
+    "## Define your Use Case <a class=\"anchor\" id=\"usecase\"></a>\n",
     "[Back to top](#top)\n",
     "\n",
     "There are a few guidelines for scoping a problem suitable for Personalize. We recommend the values below as a starting point, although the [official limits](https://docs.aws.amazon.com/personalize/latest/dg/limits.html) lie a little lower.\n",
@@ -83,7 +83,7 @@
     "In this notebook we will be working on the Data Layer, Creatig a Dataset Group and importing the Datasets. \n",
     "\n",
     "\n",
-    "## Choose a dataset or data source <a class=\"anchor\" id=\"source\"></a>\n",
+    "## Choose a Dataset or Data Source <a class=\"anchor\" id=\"source\"></a>\n",
     "[Back to top](#top)\n",
     "\n",
     "Regardless of the use case, the algorithms all share a base of learning on user-item-interaction data which is defined by 3 core attributes:\n",
@@ -857,7 +857,7 @@
     "    \n",
     "attach_response = iam.attach_role_policy(\n",
     "    RoleName = role_name,\n",
-    "    PolicyArn = \"arn:aws:iam::aws:policy/AmazonS3ReadOnlyAccess\"\n",
+    "    PolicyArn = \"arn:aws:iam::aws:policy/AmazonS3FullAccess\"\n",
     ");\n",
     "\n",
     "role_arn = create_role_response[\"Role\"][\"Arn\"]\n",
@@ -896,7 +896,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create dataset group <a class=\"anchor\" id=\"group_dataset\"></a>\n",
+    "## Create the Dataset Group <a class=\"anchor\" id=\"group_dataset\"></a>\n",
     "[Back to top](#top)\n",
     "\n",
     "The highest level of isolation and abstraction with Amazon Personalize is a *dataset group*. Information stored within one of these dataset groups has no impact on any other dataset group or models created from one - they are completely isolated. This allows you to run many experiments and is part of how we keep your models private and fully trained only on your data. \n",
@@ -917,7 +917,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create the dataset group\n",
+    "### Create the Dataset Group\n",
     "\n",
     "The following cell will create a new dataset group with the name `personalize-poc-movielens`."
    ]
@@ -1060,7 +1060,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create the interactions dataset\n",
+    "### Create the Interactions Dataset\n",
     "\n",
     "With a schema created, you can create a dataset within the dataset group. Note that this does not load the data yet, but creates a schema of what the data looks like. "
    ]
@@ -1087,7 +1087,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create the Items (movies) schema<a class=\"anchor\" id=\"items_schema\"></a>\n",
+    "## Create the Items (Movies) Schema<a class=\"anchor\" id=\"items_schema\"></a>\n",
     "[Back to top](#top)"
    ]
   },
@@ -1152,7 +1152,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create the items dataset\n",
+    "### Create the Items Dataset\n",
     "\n",
     "With a schema created, you can create a dataset within the dataset group. Note that this does not load the data yet, but creates a schema of what the data looks like. "
    ]
@@ -1179,7 +1179,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create the Users schema<a class=\"anchor\" id=\"users_schema\"></a>\n",
+    "## Create the Users Schema<a class=\"anchor\" id=\"users_schema\"></a>\n",
     "[Back to top](#top)\n",
     "\n",
     "First, define a schema to tell Amazon Personalize what type of dataset you are uploading. There are several reserved and mandatory keywords required in the schema, based on the type of dataset. More detailed information can be found in the [documentation](https://docs.aws.amazon.com/personalize/latest/dg/how-it-works-dataset-schema.html).\n",
@@ -1341,7 +1341,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Import the item metadata <a class=\"anchor\" id=\"import_items\"></a>\n",
+    "## Import the Item Metadata <a class=\"anchor\" id=\"import_items\"></a>\n",
     "[Back to top](#top)\n",
     "\n",
     "Earlier you created the dataset group and dataset to house your information, now you will execute an import job that will load the item data from the S3 bucket into the Amazon Personalize dataset. "
@@ -1370,7 +1370,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Import the user metadata <a class=\"anchor\" id=\"import_users\"></a>\n",
+    "## Import the User Metadata <a class=\"anchor\" id=\"import_users\"></a>\n",
     "[Back to top](#top)\n",
     "\n",
     "Earlier you created the dataset group and dataset to house your information, now you will execute an import job that will load the user data from the S3 bucket into the Amazon Personalize dataset. "
